--- a/modulos/contabil/account/i18n/pt_BR.po
+++ b/modulos/contabil/account/i18n/pt_BR.po
@@ -1363,7 +1363,7 @@ msgstr "Nome da Conta."
 #. module: account
 #: model:ir.model.fields,field_description:account.field_account_journal_bank_acc_number
 msgid "Account Number"
-msgstr "Número de Conta"
+msgstr "Número da Conta"
 
 #. module: account
 #: model:ir.model,name:account.model_account_report_partner_ledger
@@ -2426,7 +2426,7 @@ msgid ""
 "account if this is a Customer Invoice or Vendor Credit Note, otherwise a "
 "Partner bank account number."
 msgstr ""
-"Número de Conta do Bando para o qual a fatura será paga. Uma conta de banco "
+"Número da Conta do Bando para o qual a fatura será paga. Uma conta de banco "
 "de uma Companhia se é uma fatura ao contumidor ou Nota de Crédito de "
 "Fornecedor, de outra forma, um número de conta de um Parceiro."
 
