--- a/modulos/contabil/account_bank_statement_import/i18n/pt_BR.po
+++ b/modulos/contabil/account_bank_statement_import/i18n/pt_BR.po
@@ -47,7 +47,7 @@ msgstr "Transações de contas bancárias podem ser importados apenas uma vez !"
 #. module: account_bank_statement_import
 #: model:ir.model.fields,field_description:account_bank_statement_import.field_account_bank_statement_import_journal_creation_bank_acc_number
 msgid "Account Number"
-msgstr "Número de Conta"
+msgstr "Número da Conta"
 
 #. module: account_bank_statement_import
 #: model:ir.model.fields,field_description:account_bank_statement_import.field_account_bank_statement_import_journal_creation_type_control_ids
